CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(table)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_STANDARD_REQUIRED OFF)
SET(CMAKE_C_EXTENSIONS OFF)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(TABLE_EXTERNAL_INCLUDE_DIR include)
SET(TABLE_INTERNAL_INCLUDE_DIR table)

ADD_LIBRARY(table STATIC "")
TARGET_INCLUDE_DIRECTORIES(table
    PRIVATE
    ${PROJECT_SOURCE_DIR}/${TABLE_EXTERNAL_INCLUDE_DIR}
    ${PROJECT_SOURCE_DIR}/${TABLE_INTERNAL_INCLUDE_DIR}
)
TARGET_SOURCES(table
    PRIVATE
    ${PROJECT_SOURCE_DIR}/src/status.cpp
    ${PROJECT_SOURCE_DIR}/src/options.cpp
    ${PROJECT_SOURCE_DIR}/src/skiplist.cpp
    ${PROJECT_SOURCE_DIR}/src/table_impl.cpp
    ${PROJECT_SOURCE_DIR}/src/byte_array.cpp
    ${PROJECT_SOURCE_DIR}/src/memory_pool.cpp
)

INSTALL(
    TARGETS table
    DESTINATION lib
)
INSTALL(
    FILES
        ${PROJECT_SOURCE_DIR}/${TABLE_EXTERNAL_INCLUDE_DIR}/table.h
        ${PROJECT_SOURCE_DIR}/${TABLE_EXTERNAL_INCLUDE_DIR}/status.h
        ${PROJECT_SOURCE_DIR}/${TABLE_EXTERNAL_INCLUDE_DIR}/options.h
        ${PROJECT_SOURCE_DIR}/${TABLE_EXTERNAL_INCLUDE_DIR}/comparator.h
        ${PROJECT_SOURCE_DIR}/${TABLE_EXTERNAL_INCLUDE_DIR}/byte_array.h
    DESTINATION include
)